grafana6/grafana6.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana6
  name: grafana6
  namespace: openshift-monitoring
spec:
  ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: grafana6
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
